# lonely-solipsist

./: .coverage  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  ruff.toml
examples/: float.py
src/quant_py/: __init__.py  buscal.py  daycounter.py  rate_index.py
src/quant_py/daycounter/: _base.py  act360.py
src/quant_py/daycounters/: __init__.py  act360.py
src/quant_py/indices/: __init__.py  ois_index.py
src/quant_py/scheduling/: __init__.py  adjuster.py  period.py  roll_convention.py  schedule.py
tests/: conftest.py  test_buscal.py
tests/daycounter/: test_act360.py  test_base.py
tests/scheduling/: test_adjuster.py  test_period.py  test_roll_conventions.py  test_schedule.py
